# alpha.1

./: .gitignore  README.md  pyproject.toml
lerni/: .coverage  ludi.py  reload.py
lerni/controller/: book.py  log.py  read.py  reload.py  sql.py  translation.py
lerni/data/config/: lerni.model.json  lerni.param.json  model.lerni.json  param.lerni.json
lerni/data/config/locales/en/LC_MESSAGES/: crudAdd.mo  crudAdd.po
lerni/data/config/locales/eo/LC_MESSAGES/: crudAdd.po
lerni/data/config/locales/fr/LC_MESSAGES/: crudAdd.mo  crudAdd.po
lerni/data/ll-ja-fr/: ja.db.sqlite3
lerni/data/ll-ja-fr/csv/: J.m1.csv  JFG.m1.csv  ex.ja.csv
lerni/game/: game.py  vocabulary.py
lerni/reader/: model.py  param.py  parameters.py  read.py
lerni/tests/: .coverage  test_crud.py  test_lerni.py
lerni/tests/json/: default.json
